--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author:
   twitter: twitter_username # twitter username
   facebook: facebook_username # facebook username
   email: your-email@email.com # email adress
-  avatar: /assets/img/profile.jpg # change with your own avatar
+  avatar: /assets/img/profile.JPG # change with your own avatar
 
 # URL settings
 url: "https://klise.now.sh" #
